and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

17 Oct 14: P.Gumplinger (xrays-V10-00-05)
- address problem report 1678 for BuildPhysicsTable in G4Scintillation

07 Sept 14: V.Ivanchenko (xrays-V10-00-04)
- G4VXTRenergyLoss - fixed remaining Coverity reports

05 Sept 14: V.Ivanchenko (xrays-V10-00-03)
- G4VXTRenergyLoss - fixed Coverity reports

01 Aug 14: V.Ivanchenko (xrays-V10-00-02)
- G4SynchrotronRadiation - H.Burkhardt extend model from e+, e- to be 
    universal - applicable for all relativistic charged particles 

07 Jan 14: P.Gumplinger (xrays-V10-00-01)
- make all static 'Set/Add/Remove' methods non-inline in G4Scintillation
  and G4Cerenkov

18 Dec 13: P.Gumplinger (xrays-V10-00-00)
- make some class members and methods static in G4Cerenkov and
  G4Scintillation

14 Oct 13: V.Ivanchenko (xrays-V09-06-07)
- G4SynchrotronRadiation added interface to G4VEmAngularDistribution,
    the default G4DipBustGenerator; minor code cleanup

12 Sept 13: P.Gumplinger (xrays-V09-06-06)
- G4Scintillation - fix a bug changing incorrect GetMaxValue to GetMaxEnergy

13 June 13: P.Gumplinger (xrays-V09-06-05)
- G4Scintillation - added BuildPhysicsTable method which is doing initialisation
  as before but at the moment when material list is fully defined.

10 June 13: V.Ivanchenko (xrays-V09-06-04)
- G4Cerenkov - added BuildPhysicsTable method which is doing initialisation
    as before but at the moment when material list is fully defined;
    it is assumed that the list of materials is not changed for the next runs;
    internal table has NULL pointer to PhysicsVector if material properties 
    are not defined for a given material, this pointer is check in when step