@@ -155,7 +155,7 @@ public:
                                const G4Step&
                               ) {return 0;};
 
-	static void SetTrackSecondariesFirst(const G4bool state);
+        void SetTrackSecondariesFirst(const G4bool state);
         // If set, the primary particle tracking is interrupted and any 
         // produced Cerenkov photons are tracked next. When all have 
         // been tracked, the tracking of the primary resumes.
@@ -163,14 +163,14 @@ public:
         G4bool GetTrackSecondariesFirst() const;
         // Returns the boolean flag for tracking secondaries first.
 
-        static void SetMaxBetaChangePerStep(const G4double d);
+        void SetMaxBetaChangePerStep(const G4double d);
         // Set the maximum allowed change in beta = v/c in % (perCent)
         // per step.
 
         G4double GetMaxBetaChangePerStep() const;
         // Returns the maximum allowed change in beta = v/c in % (perCent)
 
-	static void SetMaxNumPhotonsPerStep(const G4int NumPhotons);
+        void SetMaxNumPhotonsPerStep(const G4int NumPhotons);
         // Set the maximum number of Cerenkov photons allowed to be 
         // generated during a tracking step. This is an average ONLY; 
         // the actual number will vary around this average. If invoked, 
@@ -214,9 +214,9 @@ protected:
 
 private:
 
-	static G4bool fTrackSecondariesFirst;
-        static G4double fMaxBetaChange;
-        static G4int  fMaxPhotons;
+	G4bool fTrackSecondariesFirst;
+    G4double fMaxBetaChange;
+    G4int  fMaxPhotons;
 };
 
 ////////////////////
