@@ -81,9 +81,9 @@
         // static data members
         //////////////////////
 
-G4bool G4Cerenkov::fTrackSecondariesFirst = false;
-G4double G4Cerenkov::fMaxBetaChange = 0.;
-G4int G4Cerenkov::fMaxPhotons = 0;
+//G4bool G4Cerenkov::fTrackSecondariesFirst = false;
+//G4double G4Cerenkov::fMaxBetaChange = 0.;
+//G4int G4Cerenkov::fMaxPhotons = 0;
 
         //////////////
         // Operators
@@ -98,7 +98,10 @@ G4int G4Cerenkov::fMaxPhotons = 0;
         /////////////////
 
 G4Cerenkov::G4Cerenkov(const G4String& processName, G4ProcessType type)
-           : G4VProcess(processName, type)
+           : G4VProcess(processName, type) ,
+            fTrackSecondariesFirst(false),
+            fMaxBetaChange(0),
+            fMaxPhotons(0)
 {
         SetProcessSubType(fCerenkov);
 
